# qdsv-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
docs/: conf.py  getting_started.rst  index.rst  release_notes.rst  requirements.txt
docs/apidocs/: index.rst
docs/explanations/: index.rst
docs/how_to/: index.rst
docs/integrations/: aws_braket.md  aws_braket_community_path.md  ibm_quantum.md  openqasm.md
docs/tutorials/: first_bridge_workflow.rst  index.rst  score_model_v2.rst
examples/: aws_braket_openqasm.py  eeg_semantic_signal_classification.py  score_model_v2.py
notebooks/: 01_semantic_candidate_marking.ipynb  02_predicate_oracle_marking.ipynb  03_semantic_signal_classification.ipynb  04_ibm_qiskit_bridge_demo.ipynb  05_aws_braket_openqasm_demo.ipynb  README.md
src/qdsv_bridge/: __init__.py  cli.py  client.py  compat.py  exceptions.py
tests/: test_client.py  test_compat.py
