[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qdsv-bridge"
version = "0.1.5"
description = "Lightweight Python client for QDSV Bridge, a controlled semantic-to-circuit compiler with family-based export modes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "QDSV / Qruba" }
]
keywords = ["qdsv", "semantic-computation", "quantum", "circuit", "qasm", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
docs = [
  "myst-parser>=2.0",
  "qiskit-sphinx-theme>=2.0",
  "sphinx>=7.0",
]

[project.urls]
Homepage = "https://qdsv.cloud"
Documentation = "https://qdsv.cloud/#bridge"
Source = "https://github.com/qdsvquantum-afk/qdsv-bridge"

[project.scripts]
qdsv-bridge = "qdsv_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qdsv_bridge"]
