[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qdsv-bridge"
version = "0.4.4"
description = "Lightweight Python client for capability-driven QDSV semantic-to-circuit compilation."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "QDSV / Qruba" }
]
keywords = ["qdsv", "semantic-computation", "quantum", "circuit", "qasm", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
qiskit = [
  "qiskit>=2,<3",
  "qiskit-aer>=0.17,<0.18",
  "qiskit-qasm3-import>=0.5,<0.7",
]
docs = [
  "myst-parser>=2.0",
  "qiskit-sphinx-theme>=2.0",
  "sphinx>=7.0",
]

[project.urls]
Homepage = "https://qdsv.cloud"
Documentation = "https://qdsvquantum-afk.github.io/qdsv-bridge/"
Source = "https://github.com/qdsvquantum-afk/qdsv-bridge"

[project.scripts]
qdsv-bridge = "qdsv_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qdsv_bridge"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/submissions",
  "/docs/_build",
]
